app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-crud-deployment
spec:
  selector:
    matchLabels:
      app: springboot-k8s-postgres
  replicas: 3
  template:
    metadata:
      labels:
        app: springboot-k8s-postgres
    spec:
      containers:
        - name: springboot-crud-k8s
          image: juhi404/demo:latest
          ports:
            - containerPort: 8080
          env:   # Setting Enviornmental Variables
            - name: DB_HOST   # Setting Database host address from configMap
              value: postgres
            - name: DB_NAME  # Setting Database name from configMap
              value: postgres
            - name: DB_USERNAME  # Setting Database username from Secret
              value: postgres
            - name: DB_PASSWORD # Setting Database password from Secret
              value: root
