db-deployment.yaml
# Configure 'Deployment' of mysql server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
    tier: database
spec:
  selector: # mysql Pod Should contain same labels
    matchLabels:
      app: postgres
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels: # Must match 'Service' and 'Deployment' selectors
        app: postgres
        tier: database
    spec:
      containers:
        - image: postgres:13 # image from docker-hub
          name: postgres
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:        # Mounting voulume obtained from Persistent Volume Claim
            - name: postgres-persistent-storage
              mountPath: /var/lib/postgres #This is the path in the container on which the mounting will take place.
      volumes:
        - name: postgres-persistent-storage # Obtaining 'vloume' from PVC
          persistentVolumeClaim:
            claimName: postgres-pv-claim
---
# Define a 'Service' To Expose mysql to Other Services
apiVersion: v1
kind: Service
metadata:
  name: postgres  # DNS name
  labels:
    app: postgres
    tier: database
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:       # mysql Pod Should contain same labels
    app: postgres
    tier: database
  clusterIP: None  # We Use DNS, Thus ClusterIP is not relevant
