nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: nginxapp.fosstechnix.info
      http:
        paths:
          - backend:
              service:
                name: nginx-web
                port:
                  number: 80
            path: /
            pathType: Prefix
