springboot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: springboot-ingress-k8s.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springboot-postgres-k8s
                port:
                  number: 8080
